# hayek-rag

./: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml
.run/: FastAPI.run.xml
app/: main.py
app/chat/domain/: chat_query.py  chat_response.py  embedding_generator.py  llm.py  vector_store.py
app/chat/infrastructure/: gemini_llm.py
app/core/: config.py  settings.py
app/document/application/: chunk_service.py  document_service.py  save_document.py
app/document/domain/: author.py  chunk.py  chunk_repository.py  document.py  document_repository.py  embedding_generator.py  pdf_handler.py
app/document/infrastructure/: di.py  document_router.py  embedding_generator_impl.py  mongodb_chunk_repository.py  mongodb_document_repository.py  pdf_hanlder_impl.py  voyage_embedding_generator.py
app/shared/domain/: embeddings.py  exceptions.py  model.py
app/shared/domain/value_objects/: id.py  year.py
app/shared/infrastructure/: exception_handler.py  mongodb_client.py
app/shared/infrastructure/adapters/: voyage_embedding_generator.py
app/shared/infrastructure/dependencies/: database.py
app/shared/infrastructure/di/: ai.py  database.py
notebooks/: gemini.ipynb  generate_embeddings.ipynb  voyageai_embedding_generator.ipynb
