[project]
name = "hayek-rag"
version = "0.1.0"
description = "Hayek RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.13.2",
    "pypdf>=5.6.0",
    "voyageai>=0.3.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
